k8s-local/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgresdb
        image: postgres:16.3-alpine
        ports:
        - containerPort: 5432 # where the pod of postgres is running
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432   # port address where service is running
      targetPort: 5432 # to transfer the incoming request to the port
